[ic] Prevent KeyedStoreIC from being generic when storing doubles to integer typed arrays.

BUG=chromium:666947

Review-Url: https://codereview.chromium.org/2539013002
Cr-Commit-Position: refs/heads/master@{#41390}