src/compiler/code-assembler.cc
@@ -93,6 +93,10 @@ bool CodeAssembler::IsFloat64RoundDownSupported() const {
   return raw_assembler()->machine()->Float64RoundDown().IsSupported();
 }
 
+bool CodeAssembler::IsFloat64RoundTiesEvenSupported() const {
+  return raw_assembler()->machine()->Float64RoundTiesEven().IsSupported();
+}
+
 bool CodeAssembler::IsFloat64RoundTruncateSupported() const {
   return raw_assembler()->machine()->Float64RoundTruncate().IsSupported();
 }
